<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_telekomunikasi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/img_item_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                tools:src="@android:color/darker_gray" />
        </FrameLayout>

        <TextView
                android:id="@+id/tv_item_detail_name"
                style="@style/TextContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="@string/nama_alat"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/tv_item_detail_detail"
                style="@style/TextContent"
                android:justificationMode="inter_word"
                android:layout_marginBottom="16dp"
                android:lineSpacingMultiplier="1"
                tools:text="@string/detail_alat"
                android:textColor="@android:color/black"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tahun_alat" />

                <TextView
                    android:id="@+id/tv_tahun_alat_detail"
                    style="@style/TextSpec.Value"
                    android:text="@string/tahun_alat_value" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/nama_penemu" />

                <TextView
                    android:id="@+id/tv_penemu_alat_detail"
                    style="@style/TextSpec.Value"
                    android:text="@string/penemu_alat_value" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>